Fix header spacing

--- a/www/bingo/css/bingo.css
+++ b/www/bingo/css/bingo.css
@@ -17,6 +17,7 @@ body {
 
 h1 {
   color: white;
+  margin-top: 10px;
 }
 
 .animated {
